# bin2c

./: .appveyor.yml  .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: bin2c.c
